feat: added the txn/getAll and txn/getMany to swagger.yaml
